--- a/index.html
+++ b/index.html
@@ -39,12 +39,18 @@
               <li> PÃO FRANCÊS </li>
               <li> PÃO MASSA FINA </li>
               <li> CAFÉ / LEITE </li>
-              <li> SOPA DE FEIJÃO </li>
-              <!-- <li> QUEIJO E PRESUNTO </li> -->
               <!-- <li> BANANA COZIDA </li> -->
-              <!-- <li> OVO FRITO </li> -->
-              <!-- <li> MOLHO DE SALSICHA </li> -->
               <!-- <li> BOLO </li> -->
+              <!-- <li> FRUTA </li> -->
+              <!-- <li> MOLHO DE SALSICHA </li> -->
+              <!-- <li> OVO COZIDO </li> -->
+              <!-- <li> OVO FRITO </li> -->
+              <!-- <li> PATÊ </li> -->
+              <!-- <li> PUPUNHA </li> -->
+              <!-- <li> QUARENTÃO </li> -->
+              <!-- <li> QUEIJO E PRESUNTO </li> -->
+              <li> SOPA DE FEIJÃO </li>
+              <!-- <li> TAPIOCA COM QUEIJO </li> -->
             </ul>
             </p></br>
             <p>
@@ -92,13 +98,18 @@
               <li> PÃO FRANCÊS </li>
               <li> PÃO MASSA FINA </li>
               <li> CAFÉ / LEITE </li>
-              <!-- <li> SOPA DE FEIJÃO </li> -->
-              <!-- <li> QUEIJO E PRESUNTO </li> -->
               <!-- <li> BANANA COZIDA </li> -->
-              <!-- <li> OVO FRITO </li> -->
-              <!-- <li> MOLHO DE SALSICHA </li> -->
               <!-- <li> BOLO </li> -->
+              <!-- <li> FRUTA </li> -->
+              <!-- <li> MOLHO DE SALSICHA </li> -->
+              <!-- <li> OVO COZIDO </li> -->
+              <!-- <li> OVO FRITO </li> -->
+              <!-- <li> PATÊ </li> -->
               <li> PUPUNHA </li>
+              <!-- <li> QUARENTÃO </li> -->
+              <!-- <li> QUEIJO E PRESUNTO </li> -->
+              <!-- <li> SOPA DE FEIJÃO </li> -->
+              <!-- <li> TAPIOCA COM QUEIJO </li> -->
             </ul>
             </p></br>
             <p>
@@ -146,33 +157,38 @@
               <li> PÃO FRANCÊS </li>
               <li> PÃO MASSA FINA </li>
               <li> CAFÉ / LEITE </li>
-              <!-- <li> SOPA DE FEIJÃO </li> -->
-              <li> QUEIJO E PRESUNTO </li>
               <!-- <li> BANANA COZIDA </li> -->
-              <!-- <li> OVO FRITO </li> -->
-              <!-- <li> MOLHO DE SALSICHA </li> -->
               <!-- <li> BOLO </li> -->
+              <!-- <li> FRUTA </li> -->
+              <!-- <li> MOLHO DE SALSICHA </li> -->
+              <!-- <li> OVO COZIDO </li> -->
+              <!-- <li> OVO FRITO </li> -->
+              <!-- <li> PATÊ </li> -->
+              <!-- <li> PUPUNHA </li> -->
+              <!-- <li> QUARENTÃO </li> -->
+              <li> QUEIJO E PRESUNTO </li>
+              <!-- <li> SOPA DE FEIJÃO </li> -->
+              <!-- <li> TAPIOCA COM QUEIJO </li> -->
             </ul>
             </p></br>
             <p>
             <P class="desjejum">ALMOÇO:</P>
             <ul>
+              <!-- <li> ALMOÇO ESPECIAL </li> -->
               <!-- <li> BIFE ACEBOLADO </li> -->
-              <li> ESCONDIDINHO DE FRIOS </li>
-              <!-- <li> DOBRADINHA </li> -->
-              <!-- <li> PEIXE FRITO </li> -->
-              <!-- <li> PICADINHO RICO </li> -->
-              <!-- <li> ISCA DE CARNE </li> -->
-              <!-- <li> LINGUIÇA DE FRANGO </li> -->
               <!-- <li> BIFE AO MOLHO </li> -->
+              <!-- <li> DOBRADINHA </li> -->
+              <li> ESCONDIDINHO DE FRIOS </li>
+              <!-- <li> FRANGO ASSADO </li> -->
+              <!-- <li> FRANGO FRITO </li> -->
+              <!-- <li> FRANGO GUISADO </li> -->
               <!-- <li> ISCA DE CALABRESA </li> -->
               <li> ISCA DE CARNE </li>
-              <!-- <li> FRANGO GUISADO </li> -->
-              <!-- <li> FRANGO FRITO </li> -->
-              <!-- <li> FRANGO ASSADO </li> -->
+              <!-- <li> LINGUIÇA DE FRANGO </li> -->
               <!-- <li> OVO E CALABRESA </li> -->
               <!-- <li> PANQUECAS DE CARNE </li> -->
-              <!-- <li> ALMOÇO ESPECIAL </li> -->
+              <!-- <li> PEIXE FRITO </li> -->
+              <!-- <li> PICADINHO RICO </li> -->
               <li> SUCO </li>
             </ul>
             <p></br>
@@ -204,14 +220,18 @@
               <li> PÃO FRANCÊS </li>
               <li> PÃO MASSA FINA </li>
               <li> CAFÉ / LEITE </li>
-              <!-- <li> SOPA DE FEIJÃO </li> -->
-              <!-- <li> QUEIJO E PRESUNTO </li> -->
               <!-- <li> BANANA COZIDA </li> -->
-              <!-- <li> OVO FRITO </li> -->
-              <!-- <li> OVO COZIDO </li> -->
-              <li> PATÊ </li>
-              <!-- <li> MOLHO DE SALSICHA </li> -->
               <!-- <li> BOLO </li> -->
+              <!-- <li> FRUTA </li> -->
+              <!-- <li> MOLHO DE SALSICHA </li> -->
+              <!-- <li> OVO COZIDO </li> -->
+              <!-- <li> OVO FRITO </li> -->
+              <li> PATÊ </li>
+              <!-- <li> PUPUNHA </li> -->
+              <!-- <li> QUARENTÃO </li> -->
+              <!-- <li> QUEIJO E PRESUNTO </li> -->
+              <!-- <li> SOPA DE FEIJÃO </li> -->
+              <!-- <li> TAPIOCA COM QUEIJO </li> -->
             </ul>
             </p></br>
             <p>
@@ -261,13 +281,17 @@
               <li> PÃO FRANCÊS </li>
               <li> PÃO MASSA FINA </li>
               <li> CAFÉ / LEITE </li>
-              <!-- <li> SOPA DE FEIJÃO </li> -->
-              <!-- <li> QUEIJO E PRESUNTO </li> -->
               <!-- <li> BANANA COZIDA </li> -->
-              <!-- <li> OVO FRITO </li> -->
-              <!-- <li> QUARENTÃO </li> -->
-              <!-- <li> MOLHO DE SALSICHA </li> -->
               <!-- <li> BOLO </li> -->
+              <!-- <li> FRUTA </li> -->
+              <!-- <li> MOLHO DE SALSICHA </li> -->
+              <!-- <li> OVO COZIDO </li> -->
+              <!-- <li> OVO FRITO </li> -->
+              <!-- <li> PATÊ </li> -->
+              <!-- <li> PUPUNHA </li> -->
+              <!-- <li> QUARENTÃO </li> -->
+              <!-- <li> QUEIJO E PRESUNTO </li> -->
+              <!-- <li> SOPA DE FEIJÃO </li> -->
               <li> TAPIOCA COM QUEIJO </li>
             </ul>
             </p></br>
@@ -286,7 +310,7 @@
               <!-- <li> BIFE AO MOLHO </li> -->
               <!-- <li> ISCA DE CALABRESA </li> -->
               <!-- <li> FRANGO GUISADO </li> -->
-              <li> FRANGO ASADO DE FORNO </li>
+              <li> FRANGO ASSADO </li>
               <!-- <li> FRANGO FRITO </li> -->
               <!-- <li> PANQUECAS DE CARNE </li> -->
               <!-- <li> ALMOÇO ESPECIAL </li> -->
@@ -322,13 +346,18 @@
               <li> PÃO FRANCÊS </li>
               <li> PÃO MASSA FINA </li>
               <li> CAFÉ / LEITE </li>
-              <!-- <li> SOPA DE FEIJÃO </li> -->
-              <!-- <li> QUEIJO E PRESUNTO </li> -->
               <!-- <li> BANANA COZIDA </li> -->
-              <!-- <li> OVO FRITO </li> -->
-              <!-- <li> MOLHO DE SALSICHA </li> -->
               <li> BOLO </li>
               <!-- <li> FRUTA </li> -->
+              <!-- <li> MOLHO DE SALSICHA </li> -->
+              <!-- <li> OVO COZIDO </li> -->
+              <!-- <li> OVO FRITO </li> -->
+              <!-- <li> PATÊ </li> -->
+              <!-- <li> PUPUNHA </li> -->
+              <!-- <li> QUARENTÃO </li> -->
+              <!-- <li> QUEIJO E PRESUNTO </li> -->
+              <!-- <li> SOPA DE FEIJÃO </li> -->
+              <!-- <li> TAPIOCA COM QUEIJO </li> -->
             </ul>
             </p></br>
             <p>
@@ -378,12 +407,18 @@
               <li> PÃO FRANCÊS </li>
               <li> PÃO MASSA FINA </li>
               <li> CAFÉ / LEITE </li>
-              <!-- <li> SOPA DE FEIJÃO </li> -->
-              <!-- <li> QUEIJO E PRESUNTO </li> -->
               <!-- <li> BANANA COZIDA </li> -->
-              <li> OVO FRITO </li>
-              <!-- <li> MOLHO DE SALSICHA </li> -->
               <!-- <li> BOLO </li> -->
+              <!-- <li> FRUTA </li> -->
+              <!-- <li> MOLHO DE SALSICHA </li> -->
+              <!-- <li> OVO COZIDO </li> -->
+              <li> OVO FRITO </li>
+              <!-- <li> PATÊ </li> -->
+              <!-- <li> PUPUNHA </li> -->
+              <!-- <li> QUARENTÃO </li> -->
+              <!-- <li> QUEIJO E PRESUNTO </li> -->
+              <!-- <li> SOPA DE FEIJÃO </li> -->
+              <!-- <li> TAPIOCA COM QUEIJO </li> -->
             </ul>
             </p></br>
             <p>
