--- a/index.html
+++ b/index.html
@@ -49,36 +49,53 @@
               <!-- <li> PUPUNHA </li> -->
               <!-- <li> QUARENTÃO </li> -->
               <!-- <li> QUEIJO E PRESUNTO </li> -->
-              <li> SOPA DE FEIJÃO </li>
+              <li> SOPA </li>
               <!-- <li> TAPIOCA COM QUEIJO </li> -->
             </ul>
             </p></br>
             <p>
             <P class="desjejum">ALMOÇO:</P>
             <ul>
-              <li> BIFE AO MOLHO </li>
-              <li> ISCA DE CALABRESA </li>
-              <!-- <li> ISCA DE CARNE </li> -->
-              <!-- <li> BIFE ACEBOLADO </li> -->
-              <!-- <li> DOBRADINHA </li> -->
-              <!-- <li> TAMBAQUI FRITO </li> -->
-              <!-- <li> PICADINHO RICO </li> -->
-              <!-- <li> LINGUIÇA DE FRANGO </li> -->
-              <!-- <li> FRANGO GUISADO </li> -->
-              <!-- <li> FRANGO FRITO </li> -->
-              <!-- <li> PANQUECAS DE CARNE </li> -->
               <!-- <li> ALMOÇO ESPECIAL </li> -->
+              <!-- <li> BIFE ACEBOLADO </li> -->
+              <li> BIFE AO MOLHO </li>
+              <!-- <li> CARNE AO MOLHO </li> -->
+              <!-- <li> DOBRADINHA </li> -->
+              <!-- <li> ESCONDIDINHO DE FRIOS </li> -->
+              <!-- <li> FAROFA DE CONSERVA </li> -->
+              <!-- <li> FILE DE FRANGO FRITO </li> -->
+              <!-- <li> FRANGO ASSADO </li> -->
+              <!-- <li> FRANGO FRITO </li> -->
+              <!-- <li> FRANGO GUISADO </li> -->
+              <!-- <li> ISCA DE CALABRESA </li> -->
+              <!-- <li> ISCA DE CARNE </li> -->
+              <!-- <li> ISCA DE FIGADO </li> -->
+              <li> ISCA DE FRANGO </li>
+              <!-- <li> LASANHA DE CARNE </li> -->
+              <!-- <li> LINGUIÇA DE FRANGO </li> -->
+              <!-- <li> OVO E CALABRESA </li> -->
+              <!-- <li> OVO FRITO </li> -->
+              <!-- <li> PANQUECAS DE CARNE </li> -->
+              <!-- <li> PEIXE FRITO </li> -->
+              <!-- <li> PICADINHO RICO </li> -->
+              <!-- <li> TAMBAQUI FRITO </li> -->
+              <!-- <li> REFRIGERANTE </li> -->
               <li> SUCO </li>
             </ul>
             <p></br>
             <p>
             <P class="desjejum">LANCHE:</P>
             <ul>
-              <li> BAGUETE </li>
+              <li> AÇAÍ COM TAPIOCA </li>
+              <!-- <li> BAQUETE </li> -->
+              <!-- <li> BISCOITO </li> -->
+              <!-- <li> BISCOITO RECHEADO </li> -->
+              <!-- <li> BOLACHA / IOGURTE </li> -->
+              <!-- <li> BOLO </li> -->
+              <!-- <li> KIKÃO </li> -->
               <!-- <li> MISTO QUENTE </li> -->
               <!-- <li> SALGADO </li> -->
-              <!-- <li> BOLO </li> -->
-              <!-- <li> BOLACHA / IOGURTE </li> -->
+              <!-- <li> X SALADA </li> -->
             </ul>
             </p>
           </div>
@@ -104,8 +121,8 @@
               <!-- <li> MOLHO DE SALSICHA </li> -->
               <!-- <li> OVO COZIDO </li> -->
               <!-- <li> OVO FRITO </li> -->
-              <!-- <li> PATÊ </li> -->
-              <li> PUPUNHA </li>
+              <li> PATÊ </li>
+              <!-- <li> PUPUNHA </li> -->
               <!-- <li> QUARENTÃO </li> -->
               <!-- <li> QUEIJO E PRESUNTO </li> -->
               <!-- <li> SOPA DE FEIJÃO </li> -->
@@ -115,29 +132,46 @@
             <p>
             <P class="desjejum">ALMOÇO:</P>
             <ul>
-              <!-- <li> BIFE ACEBOLADO </li> -->
-              <!-- <li> DOBRADINHA </li> -->
-              <!-- <li> PEIXE FRITO </li> -->
-              <li> PICADINHO RICO </li>
-              <!-- <li> ISCA DE CARNE </li> -->
-              <!-- <li> ISCA DE FIGADO </li> -->
-              <!-- <li> LINGUIÇA DE FRANGO </li> -->
-              <!-- <li> BIFE AO MOLHO </li> -->
-              <!-- <li> ISCA DE CALABRESA </li> -->
-              <!-- <li> FRANGO GUISADO </li> -->
-              <li> FRANGO FRITO </li>
-              <!-- <li> PANQUECAS DE CARNE </li> -->
               <!-- <li> ALMOÇO ESPECIAL </li> -->
+              <!-- <li> BIFE ACEBOLADO </li> -->
+              <!-- <li> BIFE AO MOLHO </li> -->
+              <!-- <li> CARNE AO MOLHO </li> -->
+              <!-- <li> DOBRADINHA </li> -->
+              <!-- <li> ESCONDIDINHO DE FRIOS </li> -->
+              <!-- <li> FAROFA DE CONSERVA </li> -->
+              <!-- <li> FILE DE FRANGO FRITO </li> -->
+              <!-- <li> FRANGO ASSADO </li> -->
+              <!-- <li> FRANGO FRITO </li> -->
+              <li> FRANGO GUISADO </li>
+              <!-- <li> ISCA DE CALABRESA </li> -->
+              <!-- <li> ISCA DE CARNE </li> -->
+              <li> ISCA DE FIGADO </li>
+              <!-- <li> ISCA DE FRANGO </li> -->
+              <!-- <li> LASANHA DE CARNE </li> -->
+              <!-- <li> LINGUIÇA DE FRANGO </li> -->
+              <!-- <li> OVO E CALABRESA </li> -->
+              <!-- <li> OVO FRITO </li> -->
+              <!-- <li> PANQUECAS DE CARNE </li> -->
+              <!-- <li> PEIXE FRITO </li> -->
+              <!-- <li> PICADINHO RICO </li> -->
+              <!-- <li> TAMBAQUI FRITO </li> -->
+              <!-- <li> REFRIGERANTE </li> -->
               <li> SUCO </li>
             </ul>
             <p></br>
             <p>
             <P class="desjejum">LANCHE:</P>
             <ul>
+              <!-- <li> AÇAÍ COM TAPIOCA </li> -->
               <!-- <li> BAQUETE </li> -->
-              <!-- <li> MISTO QUENTE </li> -->
+              <!-- <li> BISCOITO </li> -->
+              <!-- <li> BISCOITO RECHEADO </li> -->
+              <!-- <li> BOLACHA / IOGURTE </li> -->
+              <!-- <li> BOLO </li> -->
+              <!-- <li> KIKÃO </li> -->
+              <li> MISTO QUENTE </li>
               <!-- <li> SALGADO </li> -->
-              <li> BOLO </li>
+              <!-- <li> X SALADA </li> -->
             </ul>
             </p>
           </div>
@@ -177,30 +211,45 @@
               <!-- <li> ALMOÇO ESPECIAL </li> -->
               <!-- <li> BIFE ACEBOLADO </li> -->
               <!-- <li> BIFE AO MOLHO </li> -->
+              <!-- <li> CARNE AO MOLHO </li> -->
               <!-- <li> DOBRADINHA </li> -->
-              <li> ESCONDIDINHO DE FRIOS </li>
+              <!-- <li> ESCONDIDINHO DE FRIOS </li> -->
+              <!-- <li> FAROFA DE CONSERVA </li> -->
+              <!-- <li> FILE DE FRANGO FRITO </li> -->
               <!-- <li> FRANGO ASSADO </li> -->
+              <li> FRANGO A MILANESA </li>
               <!-- <li> FRANGO FRITO </li> -->
               <!-- <li> FRANGO GUISADO </li> -->
               <!-- <li> ISCA DE CALABRESA </li> -->
               <li> ISCA DE CARNE </li>
+              <!-- <li> ISCA DE FIGADO </li> -->
+              <!-- <li> ISCA DE FRANGO </li> -->
+              <!-- <li> LASANHA DE CARNE </li> -->
               <!-- <li> LINGUIÇA DE FRANGO </li> -->
               <!-- <li> OVO E CALABRESA </li> -->
+              <!-- <li> OVO FRITO </li> -->
               <!-- <li> PANQUECAS DE CARNE </li> -->
               <!-- <li> PEIXE FRITO </li> -->
               <!-- <li> PICADINHO RICO </li> -->
+              <!-- <li> TAMBAQUI FRITO </li> -->
+              <!-- <li> REFRIGERANTE </li> -->
               <li> SUCO </li>
             </ul>
             <p></br>
             <p>
             <P class="desjejum">LANCHE:</P>
             <ul>
+              <!-- <li> AÇAÍ COM TAPIOCA </li> -->
               <!-- <li> BAQUETE </li> -->
+              <!-- <li> BISCOITO </li> -->
+              <!-- <li> BISCOITO RECHEADO </li> -->
+              <!-- <li> BOLACHA / IOGURTE </li> -->
+              <!-- <li> BOLO </li> -->
+              <!-- <li> KIKÃO </li> -->
               <!-- <li> MISTO QUENTE </li> -->
+              <!-- <li> SALGADO </li> -->
               <!-- <li> X SALADA </li> -->
-              <!-- <li> SALGADO </li> -->
-              <!-- <li> SALGADO </li> -->
-              <li> KIKÃO </li>
+              <li> PIT STOP / IOGURTE </li>
             </ul>
             </p>
           </div>
@@ -225,8 +274,8 @@
               <!-- <li> FRUTA </li> -->
               <!-- <li> MOLHO DE SALSICHA </li> -->
               <!-- <li> OVO COZIDO </li> -->
-              <!-- <li> OVO FRITO </li> -->
-              <li> PATÊ </li>
+              <li> OVO FRITO </li>
+              <!-- <li> PATÊ </li> -->
               <!-- <li> PUPUNHA </li> -->
               <!-- <li> QUARENTÃO </li> -->
               <!-- <li> QUEIJO E PRESUNTO </li> -->
@@ -237,19 +286,29 @@
             <p>
             <P class="desjejum">ALMOÇO:</P>
             <ul>
-              <!-- <li> BIFE ACEBOLADO </li> -->
-              <li> DOBRADINHA </li>
-              <!-- <li> PEIXE FRITO </li> -->
-              <li> FILE DE FRANGO FRITO </li>
-              <!-- <li> PICADINHO RICO </li> -->
-              <!-- <li> ISCA DE CARNE </li> -->
-              <!-- <li> LINGUIÇA DE FRANGO </li> -->
-              <!-- <li> BIFE AO MOLHO </li> -->
-              <!-- <li> ISCA DE CALABRESA </li> -->
-              <!-- <li> FRANGO GUISADO </li> -->
-              <!-- <li> FRANGO FRITO </li> -->
-              <!-- <li> PANQUECAS DE CARNE </li> -->
               <!-- <li> ALMOÇO ESPECIAL </li> -->
+              <!-- <li> BIFE ACEBOLADO </li> -->
+              <!-- <li> BIFE AO MOLHO </li> -->
+              <li> CARNE AO MOLHO </li>
+              <!-- <li> DOBRADINHA </li> -->
+              <!-- <li> ESCONDIDINHO DE FRIOS </li> -->
+              <!-- <li> FAROFA DE CONSERVA </li> -->
+              <!-- <li> FILE DE FRANGO FRITO </li> -->
+              <!-- <li> FRANGO ASSADO </li> -->
+              <!-- <li> FRANGO FRITO </li> -->
+              <!-- <li> FRANGO GUISADO </li> -->
+              <!-- <li> ISCA DE CALABRESA </li> -->
+              <!-- <li> ISCA DE CARNE </li> -->
+              <!-- <li> ISCA DE FIGADO </li> -->
+              <!-- <li> ISCA DE FRANGO </li> -->
+              <!-- <li> LASANHA DE CARNE </li> -->
+              <!-- <li> LINGUIÇA DE FRANGO </li> -->
+              <li> CALABRESA E OVO </li>
+              <!-- <li> OVO FRITO </li> -->
+              <!-- <li> PANQUECAS DE CARNE </li> -->
+              <!-- <li> PEIXE FRITO </li> -->
+              <!-- <li> PICADINHO RICO </li> -->
+              <!-- <li> TAMBAQUI FRITO </li> -->
               <!-- <li> REFRIGERANTE </li> -->
               <li> SUCO </li>
             </ul>
@@ -257,11 +316,16 @@
             <p>
             <P class="desjejum">LANCHE:</P>
             <ul>
-              <!-- <li> BAQUETE </li> -->
-              <!-- <li> MISTO QUENTE </li> -->
-              <li> SALGADO </li>
+              <!-- <li> AÇAÍ COM TAPIOCA </li> -->
+              <li> BAQUETE </li>
+              <!-- <li> BISCOITO </li> -->
+              <!-- <li> BISCOITO RECHEADO </li> -->
+              <!-- <li> BOLACHA / IOGURTE </li> -->
               <!-- <li> BOLO </li> -->
-              <!-- <li> MINGAU DE MUNGUNZA </li> -->
+              <!-- <li> KIKÃO </li> -->
+              <!-- <li> MISTO QUENTE </li> -->
+              <!-- <li> SALGADO </li> -->
+              <!-- <li> X SALADA </li> -->
             </ul>
             </p>
           </div>
@@ -284,6 +348,7 @@
               <!-- <li> BANANA COZIDA </li> -->
               <!-- <li> BOLO </li> -->
               <!-- <li> FRUTA </li> -->
+              <li> FAROFA DE CHARQUE </li>
               <!-- <li> MOLHO DE SALSICHA </li> -->
               <!-- <li> OVO COZIDO </li> -->
               <!-- <li> OVO FRITO </li> -->
@@ -292,41 +357,54 @@
               <!-- <li> QUARENTÃO </li> -->
               <!-- <li> QUEIJO E PRESUNTO </li> -->
               <!-- <li> SOPA DE FEIJÃO </li> -->
-              <li> TAPIOCA COM QUEIJO </li>
+              <!-- <li> TAPIOCA COM QUEIJO </li> -->
             </ul>
             </p></br>
             <p>
             <P class="desjejum">ALMOÇO:</P>
             <ul>
+              <!-- <li> ALMOÇO ESPECIAL </li> -->
               <!-- <li> BIFE ACEBOLADO </li> -->
-              <li> LASANHA DE CARNE </li>
+              <!-- <li> BIFE AO MOLHO </li> -->
+              <!-- <li> CARNE AO MOLHO </li> -->
               <!-- <li> DOBRADINHA </li> -->
+              <!-- <li> ESCONDIDINHO DE FRIOS </li> -->
+              <!-- <li> FAROFA DE CONSERVA </li> -->
+              <!-- <li> FILE DE FRANGO FRITO </li> -->
+              <!-- <li> FRANGO ASSADO </li> -->
+              <!-- <li> FRANGO FRITO </li> -->
+              <!-- <li> FRANGO GUISADO </li> -->
+              <!-- <li> ISCA DE CALABRESA </li> -->
+              <li> ISCA DE CARNE </li>
+              <li> FEIJOADA </li>
+              <!-- <li> ISCA DE FIGADO </li> -->
+              <!-- <li> ISCA DE FRANGO </li> -->
+              <!-- <li> LASANHA DE CARNE </li> -->
+              <!-- <li> LINGUIÇA DE FRANGO </li> -->
+              <!-- <li> OVO E CALABRESA </li> -->
+              <!-- <li> OVO FRITO </li> -->
+              <!-- <li> PANQUECAS DE CARNE </li> -->
               <!-- <li> PEIXE FRITO </li> -->
               <!-- <li> PICADINHO RICO </li> -->
-              <!-- <li> ISCA DE CARNE </li> -->
-              <!-- <li> ISCA DE FRANGO </li> -->
-              <!-- <li> CARNE AO MOLHO </li> -->
-              <!-- <li> LINGUIÇA DE FRANGO </li> -->
-              <!-- <li> BIFE AO MOLHO </li> -->
-              <!-- <li> ISCA DE CALABRESA </li> -->
-              <!-- <li> FRANGO GUISADO </li> -->
-              <li> FRANGO ASSADO </li>
-              <!-- <li> FRANGO FRITO </li> -->
-              <!-- <li> PANQUECAS DE CARNE </li> -->
-              <!-- <li> ALMOÇO ESPECIAL </li> -->
-              <!-- <li> SUCO </li> -->
+              <!-- <li> TAMBAQUI FRITO </li> -->
               <li> REFRIGERANTE </li>
+              <!-- <li> SUCO </li> -->
             </ul>
             <p></br>
             <p>
             <P class="desjejum">LANCHE:</P>
             <ul>
+              <!-- <li> AÇAÍ COM TAPIOCA </li> -->
               <!-- <li> BAQUETE </li> -->
+              <!-- <li> BISCOITO </li> -->
+              <!-- <li> BISCOITO RECHEADO </li> -->
+              <!-- <li> BOLACHA / IOGURTE </li> -->
+              <!-- <li> BOLO </li> -->
+              <!-- <li> KIKÃO </li> -->
               <!-- <li> MISTO QUENTE </li> -->
               <!-- <li> SALGADO </li> -->
-              <!-- <li> BOLO </li> -->
-              <!-- <li> BISCOITO RECHEADO </li> -->
-              <li> AÇAÍ COM TAPIOCA </li>
+              <!-- <li> X SALADA </li> -->
+              <li> PASTEL </li>
             </ul>
             </p>
           </div>
@@ -363,30 +441,48 @@
             <p>
             <P class="desjejum">ALMOÇO:</P>
             <ul>
+              <!-- <li> ALMOÇO ESPECIAL </li> -->
               <!-- <li> BIFE ACEBOLADO </li> -->
+              <!-- <li> BIFE AO MOLHO </li> -->
+              <!-- <li> CARNE AO MOLHO </li> -->
               <!-- <li> DOBRADINHA </li> -->
+              <!-- <li> ESCONDIDINHO DE FRIOS </li> -->
+              <!-- <li> FAROFA DE CONSERVA </li> -->
+              <!-- <li> FILE DE FRANGO FRITO </li> -->
+              <!-- <li> FRANGO ASSADO </li> -->
+              <!-- <li> FRANGO FRITO </li> -->
+              <!-- <li> FRANGO GUISADO </li> -->
+              <li> FRANGO DESFIADO </li>
+              <li> GUISADO DE CARNE </li>
+              <!-- <li> ISCA DE CALABRESA </li> -->
+              <!-- <li> ISCA DE CARNE </li> -->
+              <!-- <li> ISCA DE FIGADO </li> -->
+              <!-- <li> ISCA DE FRANGO </li> -->
+              <!-- <li> LASANHA DE CARNE </li> -->
+              <!-- <li> LINGUIÇA DE FRANGO </li> -->
+              <!-- <li> OVO E CALABRESA </li> -->
+              <!-- <li> OVO FRITO </li> -->
+              <!-- <li> PANQUECAS DE CARNE </li> -->
               <!-- <li> PEIXE FRITO </li> -->
               <!-- <li> PICADINHO RICO </li> -->
-              <!-- <li> ISCA DE CARNE </li> -->
-              <!-- <li> LINGUIÇA DE FRANGO </li> -->
-              <!-- <li> BIFE AO MOLHO </li> -->
-              <!-- <li> ISCA DE CALABRESA </li> -->
-              <li> FRANGO GUISADO </li>
-              <!-- <li> FRANGO FRITO </li> -->
-              <!-- <li> PANQUECAS DE CARNE </li> -->
-              <!-- <li> ALMOÇO ESPECIAL </li> -->
-              <li> FAROFA DE CONSERVA </li>
+              <!-- <li> TAMBAQUI FRITO </li> -->
+              <!-- <li> REFRIGERANTE </li> -->
               <li> SUCO </li>
             </ul>
             <p></br>
             <p>
             <P class="desjejum">LANCHE:</P>
             <ul>
+              <!-- <li> AÇAÍ COM TAPIOCA </li> -->
               <!-- <li> BAQUETE </li> -->
+              <!-- <li> BISCOITO </li> -->
+              <!-- <li> BISCOITO RECHEADO </li> -->
+              <!-- <li> BOLACHA / IOGURTE </li> -->
+              <li> BOLO </li>
+              <!-- <li> KIKÃO </li> -->
               <!-- <li> MISTO QUENTE </li> -->
               <!-- <li> SALGADO </li> -->
-              <!-- <li> BOLO </li> -->
-              <li> BISCOITO </li>
+              <!-- <li> X SALADA </li> -->
             </ul>
             </p>
           </div>
@@ -424,30 +520,47 @@
             <p>
             <P class="desjejum">ALMOÇO:</P>
             <ul>
+              <!-- <li> ALMOÇO ESPECIAL </li> -->
               <li> BIFE ACEBOLADO </li>
+              <!-- <li> BIFE AO MOLHO </li> -->
+              <!-- <li> CARNE AO MOLHO </li> -->
               <!-- <li> DOBRADINHA </li> -->
-              <!-- <li> PEIXE FRITO </li> -->
-              <!-- <li> PICADINHO RICO </li> -->
+              <!-- <li> ESCONDIDINHO DE FRIOS </li> -->
+              <!-- <li> FAROFA DE CONSERVA </li> -->
+              <!-- <li> FILE DE FRANGO FRITO </li> -->
+              <!-- <li> FRANGO ASSADO </li> -->
+              <!-- <li> FRANGO FRITO </li> -->
+              <!-- <li> FRANGO GUISADO </li> -->
+              <!-- <li> ISCA DE CALABRESA </li> -->
               <!-- <li> ISCA DE CARNE </li> -->
               <!-- <li> ISCA DE FIGADO </li> -->
+              <!-- <li> ISCA DE FRANGO </li> -->
+              <!-- <li> LASANHA DE CARNE </li> -->
               <!-- <li> LINGUIÇA DE FRANGO </li> -->
-              <!-- <li> BIFE AO MOLHO </li> -->
-              <!-- <li> ISCA DE CALABRESA </li> -->
-              <!-- <li> FRANGO GUISADO </li> -->
-              <!-- <li> FRANGO FRITO </li> -->
-              <!-- <li> PANQUECAS DE CARNE </li> -->
-              <!-- <li> ALMOÇO ESPECIAL </li> -->
+              <!-- <li> OVO E CALABRESA </li> -->
               <li> OVO FRITO </li>
+              <!-- <li> PANQUECAS DE CARNE </li> -->
+              <!-- <li> PEIXE FRITO </li> -->
+              <!-- <li> PICADINHO RICO </li> -->
+              <!-- <li> TAMBAQUI FRITO </li> -->
+              <!-- <li> REFRIGERANTE </li> -->
               <li> SUCO </li>
             </ul>
             <p></br>
             <p>
             <P class="desjejum">LANCHE:</P>
             <ul>
+              <!-- <li> AÇAÍ COM TAPIOCA </li> -->
               <!-- <li> BAQUETE </li> -->
-              <li> MISTO QUENTE </li>
-              <!-- <li> SALGADO </li> -->
+              <!-- <li> BISCOITO </li> -->
+              <!-- <li> BISCOITO RECHEADO </li> -->
+              <!-- <li> BOLACHA / IOGURTE </li> -->
               <!-- <li> BOLO </li> -->
+              <!-- <li> KIKÃO </li> -->
+              <!-- <li> MISTO QUENTE </li> -->
+              <!-- <li> SALGADO </li> -->
+              <!-- <li> X SALADA </li> -->
+              <li> PÃO COM OVO E QUEIJO </li>
             </ul>
             </p>
           </div>
