--- a/index.html
+++ b/index.html
@@ -54,17 +54,17 @@
             <P class="desjejum">ALMOÇO:</P>
             <ul>
               <!-- <li> ALMOÇO ESPECIAL </li> -->
-              <li> ASSADO DE PANELA </li>
+              <!-- <li> ASSADO DE PANELA </li> -->
               <!-- <li> BIFE ACEBOLADO </li> -->
               <!-- <li> BIFE AO MOLHO </li> -->
               <!-- <li> CARNE AO MOLHO </li> -->
               <!-- <li> CALABRESA E OVO </li> -->
-              <li> CALABRESA E ACEBOLADA </li>
+              <!-- <li> CALABRESA E ACEBOLADA </li> -->
               <!-- <li> DOBRADINHA </li> -->
               <!-- <li> ESCONDIDINHO DE FRIOS </li> -->
               <!-- <li> FAROFA DE CONSERVA </li> -->
               <!-- <li> FEIJOADA </li> -->
-              <!-- <li> FILE DE FRANGO FRITO </li> -->
+              <li> FILE DE FRANGO FRITO </li>
               <!-- <li> FRANGO A MILANESA </li> -->
               <!-- <li> FRANGO ASSADO </li> -->
               <!-- <li> FRANGO DESFIADO </li> -->
@@ -78,6 +78,7 @@
               <!-- <li> LASANHA DE CARNE </li> -->
               <!-- <li> LINGUIÇA DE FRANGO </li> -->
               <!-- <li> OVO FRITO </li> -->
+              <li> ROUPA VELHA </li>
               <!-- <li> PANQUECAS DE CARNE </li> -->
               <!-- <li> PEIXE FRITO </li> -->
               <!-- <li> PICADINHO RICO </li> -->
@@ -96,8 +97,8 @@
               <!-- <li> BOLACHA / IOGURTE </li> -->
               <!-- <li> BOLO </li> -->
               <!-- <li> FAROFA DE CHARQUE </li> -->
-              <!-- <li> KIKÃO </li> -->
-              <li> MISTO QUENTE </li>
+              <li> KIKÃO </li>
+              <!-- <li> MISTO QUENTE </li> -->
               <!-- <li> PÃO COM OVO E QUEIJO </li> -->
               <!-- <li> PASTEL </li> -->
               <!-- <li> PIT STOP / IOGURTE </li> -->
@@ -127,11 +128,11 @@
               <li> CAFÉ / LEITE </li>
               <!-- <li> BANANA COZIDA </li> -->
               <!-- <li> BOLO </li> -->
-              <!-- <li> FRUTA </li> -->
+              <li> FRUTA </li>
               <!-- <li> MOLHO DE SALSICHA </li> -->
               <!-- <li> OVO COZIDO </li> -->
               <!-- <li> OVO FRITO </li> -->
-              <li> PATÊ </li>
+              <!-- <li> PATÊ </li> -->
               <!-- <li> PUPUNHA </li> -->
               <!-- <li> QUARENTÃO </li> -->
               <!-- <li> QUEIJO E PRESUNTO </li> -->
@@ -145,9 +146,9 @@
               <!-- <li> ALMOÇO ESPECIAL </li> -->
               <!-- <li> BIFE ACEBOLADO </li> -->
               <!-- <li> BIFE AO MOLHO </li> -->
-              <li> BIFE A PARMEGIANA </li>
-              <!-- <li> CARNE AO MOLHO </li> -->
-              <!-- <li> CALABRESA E OVO </li> -->
+              <!-- <li> BIFE A PARMEGIANA </li> -->
+              <li> CARNE AO MOLHO </li>
+              <li> CALABRESA E OVO </li>
               <!-- <li> DOBRADINHA </li> -->
               <!-- <li> ESCONDIDINHO DE FRIOS </li> -->
               <!-- <li> FAROFA DE CONSERVA </li> -->
@@ -162,7 +163,7 @@
               <!-- <li> ISCA DE CALABRESA </li> -->
               <!-- <li> ISCA DE CARNE </li> -->
               <!-- <li> ISCA DE FIGADO </li> -->
-              <li> ISCA DE FRANGO </li>
+              <!-- <li> ISCA DE FRANGO </li> -->
               <!-- <li> LASANHA DE CARNE </li> -->
               <!-- <li> LINGUIÇA DE FRANGO </li> -->
               <!-- <li> OVO FRITO </li> -->
@@ -190,7 +191,8 @@
               <!-- <li> PÃO COM OVO E QUEIJO </li> -->
               <!-- <li> PASTEL </li> -->
               <!-- <li> PIT STOP / IOGURTE </li> -->
-              <li> SALGADO </li>
+              <!-- <li> SALGADO </li> -->
+              <li> MINGAU DE MUNGUNZÁ </li>
               <!-- <li> X SALADA </li> -->
             </ul>
             </p>
